--- a/GameData/godarklight/SafetyWall/Attributions.htm
+++ b/GameData/godarklight/SafetyWall/Attributions.htm
@@ -1,6 +1,6 @@
 <!--
 Attributions.md v1.0.4.0
-SafetyWall (SWAL)
+SafetyWall (WALL)
 created: 01 Apr 2022
 updated: 01 Apr 2022
 -->
@@ -8,7 +8,7 @@ updated: 01 Apr 2022
 <script src="https://kit.fontawesome.com/0ea5493613.js" crossorigin="anonymous"></script>
 
 <p><i class="fa fa-gear fa-spin fa-2x" style="color: firebrick"></i></p>
-<h1 id="safetywall-swal">SafetyWall (SWAL)</h1>
+<h1 id="safetywall-swal">SafetyWall (WALL)</h1>
 <p><a href="./index.md">Home</a></p>
 <h2 id="attribution">Attribution</h2>
 <h3 id="credits">Credits</h3>
