--- a/GameData/godarklight/SafetyWall/readme.htm
+++ b/GameData/godarklight/SafetyWall/readme.htm
@@ -1,5 +1,5 @@
 <!-- readme.md v1.6.6.1
-SafetyWall (SWAL)
+SafetyWall (WALL)
 created: 01 Apr 2019
 updated: 
 -->
@@ -44,7 +44,7 @@ alt="Validate AVC .version files" /></p>
 title="GitHub Pages"><img
 src="https://github.com/zer0Kerbal/SafetyWall/actions/workflows/pages/pages-build-deployment/badge.svg"
 title="GitHub IO" alt="GitHub Pages" /></a></p>
-<h1 id="safetywall-swal">SafetyWall (SWAL)</h1>
+<h1 id="safetywall-swal">SafetyWall (WALL)</h1>
 <p>An add-on that adds a safety fence around the Kerbal Space Center,
 for Kerbal Space Program.</p>
 <h2 id="by-zer0kerbal-originally-by-godarklight">By <a
