--- a/GameData/godarklight/SafetyWall/Attributions.htm
+++ b/GameData/godarklight/SafetyWall/Attributions.htm
@@ -1,14 +1,9 @@
-<!--
-Attributions.md v1.0.4.0
-SafetyWall (WALL)
-created: 01 Apr 2022
-updated: 01 Apr 2022
--->
+
 
 <script src="https://kit.fontawesome.com/0ea5493613.js" crossorigin="anonymous"></script>
 
 <p><i class="fa fa-gear fa-spin fa-2x" style="color: firebrick"></i></p>
-<h1 id="safetywall-swal">SafetyWall (WALL)</h1>
+<h1 id="safetywall-wall">SafetyWall (WALL)</h1>
 <p><a href="./index.md">Home</a></p>
 <h2 id="attribution">Attribution</h2>
 <h3 id="credits">Credits</h3>
@@ -40,4 +35,3 @@ href="http://www.highresolutiontextures.com/stone-wall-brick-wall-free-textures"
   <li><a href="https://forum.kerbalspaceprogram.com/index.php?/profile/66411-zelda/"><img border="0" alt="Zelda" src="https://kerbal-forum-uploads.s3.us-west-2.amazonaws.com/monthly_2019_07/LoZ_RGB_960x960.thumb.jpg.32a815400e819b11482764bdea71373c.jpg" width="50" height="50" > Zelda</a></li>
 </ul>
 
-<!-- this file CC BY-NC-ND 3.0 Unported by zer0Kerbal -->
