--- a/GameData/godarklight/SafetyWall/1.3.0.0.htm
+++ b/GameData/godarklight/SafetyWall/1.3.0.0.htm
@@ -19,7 +19,7 @@ title="GitHub IO" alt="Pages" /></a></p>
 <p><img
 src="https://img.shields.io/badge/CODE-%3C.NET%203.5%3E%20%3CC%23%205.0%3E-darkblue?style=plastic&amp;labelColor=66ccff"
 title="Code" alt="Code" /> <img
-src="https://img.shields.io/badge/SafetyWall.dll%20-v1.3.0.3-orange.svg?style=plastic&amp;labelColor=darkgreen"
+src="https://img.shields.io/badge/SafetyWall.dll%20-v1.3.0.17-orange.svg?style=plastic&amp;labelColor=darkgreen"
 title="1.2.0.3" alt="SafetyWall" /></p>
 <h2 id="version-1300-release---thank-you-godarklight-edition">Version
 1.3.0.0-release - <code>&lt;Thank you godarklight&gt;</code>
@@ -27,7 +27,7 @@ edition</h2>
 <ul>
 <li>Released
 <ul>
-<li>03 May 2023</li>
+<li>01 Apr 2023</li>
 <li>for Kerbal Space Program 1.12.5</li>
 <li>by <a href="https://github.com/zer0Kerbal">zer0Kerbal</a></li>
 </ul></li>
@@ -39,9 +39,14 @@ edition</h2>
 <ul>
 <li>Recompiled
 <ul>
-<li>SafetyWall.dll v1.2.0.11 --&gt; v1.3.0.3</li>
+<li>SafetyWall.dll v1.2.0.11 --&gt; v1.3.0.17</li>
 </ul></li>
+<li>Add flag</li>
 <li>lint and update documentation</li>
+<li>Localize
+<ul>
+<li>English (en-us.cfg)</li>
+</ul></li>
 </ul>
 <h2 id="see-more">See More</h2>
 <ul>
