--- a/GameData/godarklight/SafetyWall/readme.htm
+++ b/GameData/godarklight/SafetyWall/readme.htm
@@ -20,7 +20,7 @@ src="https://img.shields.io/badge/Github-Listed-white.svg?labelColor=181717&amp;
 title="GitHub" alt="GitHub" /></a> <a
 href="https://zer0kerbal.github.io/SafetyWall/"
 title="GitHub Pages"><img
-src="https://github.com/zer0Kerbal/SafetyWall/actions/workflows/pages/pages-build-deployment/badge.svg"
+src="https://img.shields.io/badge/GitHub-Pages-white?style=plastic&amp;labelColor=9cf&amp;logoColor=181717&amp;logo=github"
 title="GitHub IO" alt="GitHub Pages" /></a></p>
 <p><img
 src="https://img.shields.io/endpoint?url=https://raw.githubusercontent.com/zer0Kerbal/SafetyWall/master/json/code.json"
@@ -32,12 +32,11 @@ href="https://www.curseforge.com/kerbal/ksp-mods/SafetyWall"
 title="SafetyWall (WALL)">SafetyWall (WALL)</a></h2>
 <p>An add-on that adds a safety fence around the Kerbal Space Center,
 for Kerbal Space Program.</p>
-<h2 id="by-zer0kerbal-originally-by-godarklightauth-link">By <a
+<h2 id="by-zer0kerbal-originally-by-godarklight">By <a
 href="https://forum.kerbalspaceprogram.com/index.php?/profile/190933-*/"
-title="zer0Kerbal"><code>zer0Kerbal</code></a>, originally by
-[<code>godarklight</code><a
+title="zer0Kerbal"><code>zer0Kerbal</code></a>, originally by <a
 href="https://forum.kerbalspaceprogram.com/index.php?/profile/92588-*/"
-title="godarklight">auth-link</a></h2>
+title="godarklight"><code>godarklight</code></a></h2>
 <h3 id="see-more">See more</h3>
 <blockquote>
 <ul>
@@ -63,9 +62,12 @@ title="Marketing Slicks">Marketing Slicks</a></li>
 <li>Assist to update the code</li>
 <li>Marketing Images and Videos such as hero shots, animated gifs, short
 highlights</li>
-<li>Translations: See the [README in the Localization folder][lreadme]
-for instructions for adding or improving translations. There is also the
-[quickstart guide][qstart]. <a
+<li>Translations: See the <a
+href="https://github.com/zer0Kerbal/zer0Kerbal/blob/master/Localization/readme.md"
+title="Localization Readme">README in the Localization folder</a> for
+instructions for adding or improving translations. There is also the <a
+href="https://github.com/zer0Kerbal/zer0Kerbal/blob/master/Localization/quickstart.md"
+title="Quickstart">quickstart guide</a>. <a
 href="https://github.com/zer0Kerbal/SafetyWall/"
 title="GitHub">GitHub</a> push is the best way to contribute.
 <em>Additions and corrections welcome!</em></li>
@@ -77,7 +79,9 @@ title="GitHub Issues">GitHub</a>.</li>
 <h3 id="localization">Localization</h3>
 <blockquote>
 <ul>
-<li>![English][EN] English</li>
+<li><img
+src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/EN.png"
+title="English" alt="English" /> English</li>
 <li><em><strong>your translation here</strong></em></li>
 </ul>
 </blockquote>
@@ -88,9 +92,10 @@ Website/App</p>
 <h3 id="dependencies">Dependencies</h3>
 <ul>
 <li><a href="https://kerbalspaceprogram.com/"
-title="Kerbal Space Program">Kerbal Space Program</a> [<img
-src="https://kerbalspaceprogram.com/" title="Kerbal Space Program"
-alt="Kerbal Space Program][SHD:ksp]" /></li>
+title="Kerbal Space Program">Kerbal Space Program</a> <a
+href="https://kerbalspaceprogram.com/" title="Kerbal Space Program"><img
+src="https://img.shields.io/endpoint?url=https://raw.githubusercontent.com/zer0Kerbal/SafetyWall/master/json/ksp.json"
+title="Kerbal Space Program" alt="Kerbal Space Program" /></a></li>
 </ul>
 <h3 id="recommends">Recommends</h3>
 <ul>
@@ -154,7 +159,7 @@ Source: <a href="https://github.com/godarklight/KSPSafetyWall"
 title="GitHub">GitHub</a><br />
 License: <a href="https://unlicense.org/" title="Unilicense"><img
 src="https://img.shields.io/badge/License-Unilicense-black?style=plastic&amp;labelColor=white"
-title="Unilicense" alt="License" /></a> ![License][LIC:0:log]</p>
+title="Unilicense" alt="License" /></a></p>
 </blockquote>
 <h4 id="disclaimers">Disclaimer(s)</h4>
 <blockquote>
@@ -178,7 +183,7 @@ title="zer0Kerbal"><code>zer0Kerbal</code></a></h3>
 <p>Comment, click, like, share, up-vote, subscribe</p>
 <blockquote>
 <p><em><strong>Completely voluntary, absolutely amazing, and really does
-help me out a lot!</strong></em><br />
+out a lot!</strong></em><br />
 <em>and it is true.</em></p>
 </blockquote>
 <p><a
@@ -190,6 +195,8 @@ href="https://www.patreon.com/zer0Kerbal/membership"
 title="Patreon"><img
 src="https://img.shields.io/badge/Patreon%20-Patreonize-FF424D?style=for-the-badge&amp;logo=patreon/"
 title="Patreon" alt="Patreon" /></a></p>
+
+
 
 
 
