--- a/GameData/godarklight/SafetyWall/Attributions.htm
+++ b/GameData/godarklight/SafetyWall/Attributions.htm
@@ -33,6 +33,7 @@ title="SafetyWall (WALL)">SafetyWall (WALL)</a></h2>
 <h3 id="translations">Translations</h3>
 <ul>
   <li><img src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/EN.png " alt="English" style="zoom:100%;" /> English</li>
+  <li><img src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/zed'K/img/FR.png " alt="French (Français)" style="zoom:100%;" /> French (Français) - merci beaucoup  <a href="https://github.com/Icecoptere" alt="MIcecoptere">Icecoptere</a></li>
   <li><small>Additions and corrections welcome!</small></li>
 </ul>
 
