--- a/GameData/godarklight/SafetyWall/Attributions.htm
+++ b/GameData/godarklight/SafetyWall/Attributions.htm
@@ -31,9 +31,11 @@ title="SafetyWall (WALL)">SafetyWall (WALL)</a></h2>
 <li>none</li>
 </ul>
 <h3 id="translations">Translations</h3>
+<p>Muito obrigado Santos</p>
 <ul>
   <li><img src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/EN.png " alt="English" style="zoom:100%;" /> English</li>
-  <li><img src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/zed'K/img/FR.png " alt="French (Français)" style="zoom:100%;" /> French (Français) - merci beaucoup  <a href="https://github.com/Icecoptere" alt="MIcecoptere">Icecoptere</a></li>
+  <li><img src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/zed'K/img/BR.png" alt="Português Brasil" style="zoom:100%;" />  Brazilian Portuguese (Português Brasil)- muito obrigada  <a href="https://github.com/ClaraSantosmf" alt="Santos">Santos</a></li>
+  <li><img src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/zed'K/img/FR.png" alt="French (Français)" style="zoom:100%;" /> French (Français) - merci beaucoup  <a href="https://github.com/Icecoptere" alt="Icecoptere">Icecoptere</a></li>
   <li><small>Additions and corrections welcome!</small></li>
 </ul>
 
