--- a/GameData/godarklight/SafetyWall/readme.htm
+++ b/GameData/godarklight/SafetyWall/readme.htm
@@ -82,6 +82,15 @@ title="GitHub Issues">GitHub</a>.</li>
 <li><img
 src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/EN.png"
 title="English" alt="English" /> English</li>
+<li><img
+src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/zed&#39;K/img/BR.png"
+title="Português Brasil" alt="Português Brasil" /> Brazilian Portuguese
+(Português Brasil) - muito obrigada <a
+href="https://github.com/ClaraSantosmf">Santo</a></li>
+<li><img
+src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/zed&#39;K/img/FR.png"
+title="Français" alt="Français" /> French (Français) - merci beaucoup <a
+href="https://github/Icecoptere">Icecoptere</a></li>
 <li><em><strong>your translation here</strong></em></li>
 </ul>
 </blockquote>
