--- a/GameData/godarklight/SafetyWall/1.3.4.0.htm
+++ b/GameData/godarklight/SafetyWall/1.3.4.0.htm
@@ -41,7 +41,7 @@ title="1.2.0.3" alt="SafetyWall" /></p>
 <li><img
 src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/RU.png"
 alt="Russian (Русский)" /> Russian (Русский)</li>
-<li>Спасибо <a href="https://github/evanisrael">evanisrael</a></li>
+<li>Спасибо <a href="https://github.com/evanisrael">evanisrael</a></li>
 </ul></li>
 </ul>
 <h2 id="see-more">See More</h2>
@@ -72,7 +72,7 @@ muito obrigada <a href="https://github.com/ClaraSantosmf">Santo</a></li>
 <li><img
 src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/FR.png"
 alt="Français" /> French (Français) - merci beaucoup <a
-href="https://github/Icecoptere">Icecoptere</a></li>
+href="https://github.com/Icecoptere">Icecoptere</a></li>
 <li><img
 src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/NL.png"
 alt="Dutch (Nederlands)" /> Dutch (Nederlands) - bedankt <a
@@ -80,7 +80,7 @@ href="https://github.com/wittekop38">wittekop38</a></li>
 <li><img
 src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/RU.png"
 alt="Russian (Русский)" /> Russian (Русский) - спасибо <a
-href="https://github/evanisrael">evanisrael</a></li>
+href="https://github.com/evanisrael">evanisrael</a></li>
 <li><em><strong>your translation here</strong></em></li>
 </ul>
 <p>HELP WANTED: See the <a
@@ -113,9 +113,3 @@ href="https://www.patreon.com/zer0Kerbal/membership"
 title="Patreon"><img
 src="https://img.shields.io/badge/Patreon%20-Patreonize-FF424D?style=for-the-badge&amp;logo=patreon"
 title="Patreon" alt="Patreon" /></a></p>
-
-
-
-
-
-
