--- a/GameData/godarklight/SafetyWall/readme.htm
+++ b/GameData/godarklight/SafetyWall/readme.htm
@@ -70,7 +70,7 @@ muito obrigada <a href="https://github.com/ClaraSantosmf">Santo</a></li>
 <li><img
 src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/FR.png"
 alt="Français" /> French (Français) - merci beaucoup <a
-href="https://github/Icecoptere">Icecoptere</a></li>
+href="https://github.com/Icecoptere">Icecoptere</a></li>
 <li><img
 src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/NL.png"
 alt="Dutch (Nederlands)" /> Dutch (Nederlands) - bedankt <a
@@ -78,7 +78,7 @@ href="https://github.com/wittekop38">wittekop38</a></li>
 <li><img
 src="https://raw.githubusercontent.com/zer0Kerbal/zer0Kerbal/master/img/RU.png"
 alt="Russian (Русский)" /> Russian (Русский) - спасибо <a
-href="https://github/evanisrael">evanisrael</a></li>
+href="https://github.com/evanisrael">evanisrael</a></li>
 <li><em><strong>your translation here</strong></em></li>
 </ul>
 </blockquote>
